디비 연결해서 데이터 추가까지 구현